tools/data-handler/test/test-data/invalid/invalid-cardsconfig.json/.cards/local/templates/decision/c/DECISION-1/index.adoc
= Decision Summary

== Context

Background information. What is motivating this decision. Which options were considered.

== Decision

What is the change that we're proposing or doing.

== Consequences

Benefits and drawbacks of the decision. What happens next.
